# diary

./: .gitignore  CLAUDE.md  README.rst  alembic.ini  config.py  diary.lark  export.py  ingest.py  manage.py  objects.py  openapi.py  parse.py  pyproject.toml  test_objects.py  test_parse.py  tests_and_linting.sh  zope.py
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b425a86a4ad2_initial.py
api/: __init__.py  crud.py  deps.py  login.py  users.py
backend/: pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 192907bbbed1_initial.py  3b6138ce1674_no_text_indexing.py  b871b611f14a_text_indexing.py  cd5c889dd418_not_nullable.py
backend/diary/: __init__.py  api.py  config.py  model.py
backend/diary/api/: __init__.py  auth.py  db.py  events.py
backend/tests/: test_api.py  test_config.py
frontend/: .gitignore  TESTING_APPROACH_DEMO.md  generate-client.sh  index.html  modify-openapi-operationids.js  package-lock.json  package.json  test_results.txt  vite.config.ts
frontend/src/: routeTree.gen.ts  utils.test.ts
frontend/src/client/: index.ts  models.ts  schemas.ts  services.ts
frontend/src/client/core/: ApiRequestOptions.ts  OpenAPI.ts  request.ts  types.ts
frontend/src/components/Admin/: AddUser.test.tsx  EditUser.test.tsx
frontend/src/components/Common/: ActionsMenu.test.tsx  ActionsMenu.tsx  DeleteAlert.test.tsx  DeleteAlert.tsx  Navbar.test.tsx  NotFound.test.tsx  PaginationFooter.test.tsx  Sidebar.test.tsx  Sidebar.tsx  SidebarItems.test.tsx  SidebarItems.tsx  UserMenu.test.tsx
frontend/src/components/UserSettings/: Appearance.test.tsx  ChangePassword.test.tsx  DeleteAccount.test.tsx  DeleteConfirmation.test.tsx  UserInformation.test.tsx
frontend/src/hooks/: useAuth.test.tsx  useAuth.ts  useCustomToast.test.tsx
frontend/src/routes/: __root.test.tsx  _layout.test.tsx  login.test.tsx  login.tsx
frontend/src/routes/_layout/: admin.test.tsx  admin.tsx  index.test.tsx  settings.test.tsx
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/mocks/: handlers.ts  server.ts
models/: generic.py  security.py  user.py
python/core/: pyproject.toml
python/core/src/diary/: __init__.py  cli.py  config.py  dates.py  diary.lark  dump.py  export.py  ingest.py  parse.py  zope.py
python/core/tests/: test_config.py  test_objects.py  test_parse.py  test_zope.py
scripts/: export.py  ingest.py  tests_and_linting.sh
tests/: conftest.py  helpers.py  test_api.py  test_api_deps.py  test_api_init.py  test_api_login.py  test_api_users.py  test_config.py  test_helpers.py  test_migrations.py  test_objects.py  test_parse.py  test_zope.py
