[project]
name = "diary"
version = "0.1.0"
description = "A journal/diary to record things that have happened."
authors = ["Chris Withers <chris@withers.org>"]
readme = "README.rst"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "configurator>=3.2.0",
    "lark>=1.2.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "structlog>=25.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.1.1",
    "testfixtures>=10.0.0",
    "black>=24.10.0",
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "types-beautifulsoup4>=4.12.0",
    "types-requests>=2.32.0",
    "responses>=0.25.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "configurator",
]
ignore_missing_imports = true

