[tool.poetry]
name = "diary"
version = "0.1.0"
description = "A journal/diary to record things that have happened."
authors = ["Chris Withers <chris@withers.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "*"
psycopg2 = "*"
mortar_mixins = "^2.3"
mortar_rdb = "^3.0"
configurator = "^1.0"
pyyaml = "^5.1"
alembic = "^1.0"
starlette = {version="^0.13", extras=["full"]}
uvicorn = "^0.11.2"
mortar = { path = "../../mortar", develop = true }
mush = { path = "../../mush", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^4.5"
testfixtures = "^6.8"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

