[project]
name = "diary"
version = "0.1.0"
description = "A journal/diary to record things that have happened."
authors = [
    { name = "Chris Withers", email = "chris@withers.org" }
]
readme = "../../README.rst"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "configurator>=3.2.0",
    "lark>=1.2.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.2",
    "structlog>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
